// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewReducer should handle specific defined types: defined type SET_GRAPH_GRANULARITY_RHSM 1`] = `
Object {
  "result": Object {
    "graphQuery": Object {
      "test_id": Object {
        "granularity": "lorem granularity",
      },
    },
  },
  "type": "SET_GRAPH_GRANULARITY_RHSM",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_GRAPH_SLA_RHSM 1`] = `
Object {
  "result": Object {
    "graphQuery": Object {
      "test_id": Object {
        "sla": "lorem sla",
      },
    },
  },
  "type": "SET_GRAPH_SLA_RHSM",
}
`;
